--- a/Project2/Project2.vcxproj.filters
+++ b/Project2/Project2.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="option1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="nqueen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="option1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="input.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="nqueens.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
