--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="nqueens.h" />
     <ClInclude Include="option1.h" />
     <ClInclude Include="option2.h" />
+    <ClInclude Include="option3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
